--- a/BTCPayServer.Plugins.Boltz/BTCPayServer.Plugins.Boltz.csproj
+++ b/BTCPayServer.Plugins.Boltz/BTCPayServer.Plugins.Boltz.csproj
@@ -6,7 +6,7 @@
     <!-- Plugin specific properties -->
     <PropertyGroup>
         <Product>Boltz</Product>
-        <Description>Accept Lightning payments without running a node and giving up custody.</Description>
+        <Description>Accept Lightning payments without running a node and without giving up custody.</Description>
         <Version>1.0.0</Version>
     </PropertyGroup>
 
