feat: greenfield setup api

--- a/BTCPayServer.Plugins.Boltz/BTCPayServer.Plugins.Boltz.csproj
+++ b/BTCPayServer.Plugins.Boltz/BTCPayServer.Plugins.Boltz.csproj
@@ -47,6 +47,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="System.Text.Encodings.Web" Version="10.0.2" />
     </ItemGroup>
 
     <ItemGroup>
