--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           cache: "npm"
 
       - name: Restore dependencies
-        run: dotnet restore BTCPayServer.Plugins.Boltz --locked-mode
+        run: dotnet restore BTCPayServer.Plugins.Boltz --locked-mode --force-evaluate
 
       - name: Build plugin
         run: dotnet build BTCPayServer.Plugins.Boltz --configuration Release --no-restore
