Revert "ci: fix restore"
This reverts commit 8ba9dd3b523cce61aaf3b79cf9dc63c3aea0951e.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           cache: "npm"
 
       - name: Restore dependencies
-        run: dotnet restore BTCPayServer.Plugins.Boltz --locked-mode --force-evaluate
+        run: dotnet restore BTCPayServer.Plugins.Boltz --locked-mode
 
       - name: Build plugin
         run: dotnet build BTCPayServer.Plugins.Boltz --configuration Release --no-restore
