--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "btcpayserver"]
 	path = btcpayserver
 	url = https://github.com/btcpayserver/btcpayserver
+[submodule "regtest"]
+	path = regtest
+	url = https://github.com/BoltzExchange/regtest
